[project]
name = "agent-crossing"
version = "0.1.0"
description = "Generative Agents with Phaser 3 & FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "pinecone-client>=5.0.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "pydantic>=2.7.0",
    "mlx-lm>=0.30.6 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "pinecone>=8.0.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.uv.workspace]
members = ["packages/backend"]

[tool.pytest.ini_options]
testpaths = ["packages/backend/tests"]
pythonpath = ["packages/backend/src"]
